Started working on UI

--- a/GDevelop Prototype/layouts/fds-east.json
+++ b/GDevelop Prototype/layouts/fds-east.json
@@ -400,6 +400,10 @@
     {
       "name": "Scale",
       "type": "ScalableCapability::ScalableBehavior"
+    },
+    {
+      "name": "Text",
+      "type": "TextContainerCapability::TextContainerBehavior"
     }
   ]
 }
