--- a/GDevelop Prototype/externalLayouts/fds-east.json
+++ b/GDevelop Prototype/externalLayouts/fds-east.json
@@ -1,5 +1,5 @@
 {
-  "associatedLayout": "Game",
+  "associatedLayout": "Exploration",
   "name": "FDS East",
   "instances": [
     {
@@ -56,7 +56,7 @@
       "persistentUuid": "58fde8d2-5f6f-4c67-b388-713e3239ba9d",
       "width": 0,
       "x": 0,
-      "y": -64,
+      "y": 0,
       "zOrder": 1,
       "numberProperties": [
         {
@@ -100,7 +100,7 @@
     "gridColor": 10401023,
     "gridAlpha": 0.4,
     "snap": true,
-    "zoomFactor": 0.4194339782759061,
+    "zoomFactor": 0.3437520241612316,
     "windowMask": false,
     "selectedLayer": "Inspect"
   }
